Добавил сохранение фоток в файловую систему

--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^5.4.0",
+    "base64-img": "^1.0.4",
     "bull": "^3.5.2",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "fs": "0.0.1-security",
     "ioredis": "^4.2.0",
     "mocha": "^5.2.0",
     "moment": "^2.23.0",
     "object-path": "^0.11.4",
+    "path": "^0.12.7",
     "prom-client": "^11.3.0",
     "request": "^2.88.0",
     "sms_ru": "0.0.1",
