Тг бот ид из энв

--- a/envs/test.env
+++ b/envs/test.env
@@ -13,3 +13,4 @@ COLD_START=1
 STOCKS_LIST=binance
 METRICS_PORT=9822
 MAIL_API_KEY=6p15pdqdt58q6njpipnj1crweiu4r9esgnfdqi7y
+TG_BOT=1345593475:AAE39-SA_BVpj3kT-Mn7sgCH2dXgx6TlbZk
