--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "bull": "^3.5.2",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
+    "excel4node": "^1.7.2",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
     "fs": "0.0.1-security",
     "ioredis": "^4.2.0",
     "mocha": "^5.2.0",
-    "moment": "^2.23.0",
+    "moment": "^2.28.0",
     "node-telegram-bot-api": "^0.50.0",
     "object-path": "^0.11.4",
     "path": "^0.12.7",
