--- a/envs/dev.env
+++ b/envs/dev.env
@@ -15,4 +15,4 @@ METRICS_PORT=9822
 MAIL_API_KEY=6p15pdqdt58q6njpipnj1crweiu4r9esgnfdqi7y
 SENTRY_DSN=https://afecc52c7e16428689144e39cbacefcb@sentry.io/1482448
 TG_BOT=5598565756:AAE5IKgkmofCCECNRZV88-__WUMx2YdVb6Q
-SERVER_PORT:5001
+SERVER_PORT=5001
