--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "path": "^0.12.7",
     "prom-client": "^11.3.0",
     "request": "^2.88.0",
-    "sms_ru": "0.0.1",
+    "sms_ru": "^0.0.1",
     "swagger-jsdoc": "^3.2.9",
     "swagger-routes-express": "^3.0.1",
     "swagger-ui-express": "^4.0.6",
